--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASSIGNMENT-01</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header class="header">
+            <img src="assets/Group.png" alt="" width="240px" height="240px">
+        <div class="header-text"></div>
+            <h1>"In the near future, I hope to become a Developer."</h1>
+            <p>I am going to be a developer and I want to be a developer</p>
+        </div>
+            <button class="header-img">Contact with me</button>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
