added the new line

--- a/index.html
+++ b/index.html
@@ -16,7 +16,63 @@
             <button class="header-img">Contact with me</button>
     </header>
     <main>
-
+        <section>
+           <div>
+               <h2>To Built Different Personality</h2>
+               <h4>To Know About Web Development.To Built A Personality In Web Development</h4>
+           </div>
+           <div>
+               <h2>I will Do Coding and Change The World</h2>
+               <h4>I will Be A Programar To teach the illiterate person</h4>
+               <img src="assets/Layer_1.png" alt="">
+               <button>Learn More</button>
+           </div>
+           <div>
+            <h2>I will help People by creating Modern Web System</h2>
+            <h4>People Will get Modern Web System By Me And They Will bless Me</h4>
+            <img src="assets/Group 3.png" alt="">
+            <button>Learn More</button>
+           </div>
+           <div>
+            <h2>I will Do Coding and Change The World</h2>
+            <h4>And the World Will be my Under Control</h4>
+            <img src="assets/Group 4.png" alt="">
+            <button>Learn More</button>
+           </div>
+        </section>
+        <section>
+            <div>
+               <h2>My Inspiration</h2>
+               <h4>my Inspiration is Bill Gates.He won my respect</h4>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h2>My Current Target</h2>
+                <h4>My Current Target is to learn About HTML,JAVA and Others Programing language</h4>
+            </div>
+            <div>
+                <ul>
+                    <li><img src="assets/html.png" alt=""></li>
+                    <h2>HTML</h2>
+                    <input type="button" value="Learn More">
+                    <li><img src="assets/css.png" alt=""></li>
+                    <h2>CSS</h2>
+                    <input type="button" value="Learn More">
+                    <li><img src="assets/js.png" alt=""></li>
+                    <h2>JAVAScript</h2>
+                    <input type="button" value="Learn More">
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h2>I need Support</h2>
+                <h4>Your Support can do My Work Easy</h4>
+                <input type="submit" value="Suggest me any feedback for me">
+                <button aria-placeholder="submit">submit</button>
+            </div>
+        </section>
     </main>
     <footer>
 
