--- a/index.html
+++ b/index.html
@@ -7,66 +7,80 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header class="header">
-            <img src="assets/Group.png" alt="" width="240px" height="240px">
-        <div class="header-text"></div>
-            <h1>"In the near future, I hope to become a Developer."</h1>
-            <p>I am going to be a developer and I want to be a developer</p>
+    <header>
+        <nav>
+            <h3 class="nav-title">IJAJ.R</h3>
+            <ul>
+                <li><a href=""><button>Download Resume</button></a></li>
+            </ul>
+        </nav>
+        <div class="header">
+                <img src="assets/Group.png" alt="" width="240px" height="240px">
+            <div class="benner"></div>
+                <h1>"In the near future, I hope to become a Developer."</h1>
+                <p>I am going to be a developer and I want to be a developer</p>
+                <button class="header-img">Contact with me</button>\
+            </div>
         </div>
-            <button class="header-img">Contact with me</button>
     </header>
     <main>
         <section>
-           <div>
-               <h2>To Built Different Personality</h2>
-               <h4>To Know About Web Development.To Built A Personality In Web Development</h4>
+           <div class="text-center">
+               <h3>To Built Different Personality</h3>
+               <p>To Know About Web Development.To Built A Personality In Web Development</p>
            </div>
            <div>
-               <h2>I will Do Coding and Change The World</h2>
-               <h4>I will Be A Programar To teach the illiterate person</h4>
+               <h3>I will Do Coding and Change The World</h3>
+               <p>I will Be A Programar To teach the illiterate person</p>
                <img src="assets/Layer_1.png" alt="">
                <button>Learn More</button>
            </div>
            <div>
-            <h2>I will help People by creating Modern Web System</h2>
-            <h4>People Will get Modern Web System By Me And They Will bless Me</h4>
+            <h3>I will help People by creating Modern Web System</h3>
+            <p>People Will get Modern Web System By Me And They Will bless Me</p>
             <img src="assets/Group 3.png" alt="">
             <button>Learn More</button>
            </div>
            <div>
-            <h2>I will Do Coding and Change The World</h2>
-            <h4>And the World Will be my Under Control</h4>
+            <h3>I will Do Coding and Change The World</h3>
+            <p>And the World Will be my Under Control</p>
             <img src="assets/Group 4.png" alt="">
             <button>Learn More</button>
            </div>
         </section>
         <section>
-            <div>
-               <h2>My Inspiration</h2>
-               <h4>my Inspiration is Bill Gates.He won my respect</h4>
+            <div class="text-content">
+               <h3 class="text-center">My Inspiration</h3>
+               <p class="text-center">my Inspiration is Bill Gates.He won my respect</p>
+               <iframe width="1076" height="550" src="https://www.youtube.com/embed/WWKTfAI1saU?si=-oLwCEA_iQDjCW2S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
-        <section>
-            <div>
-                <h2>My Current Target</h2>
-                <h4>My Current Target is to learn About HTML,JAVA and Others Programing language</h4>
-            </div>
-            <div>
-                <ul>
-                    <li><img src="assets/html.png" alt=""></li>
-                    <h2>HTML</h2>
+        <section class="skills">
+                <h3 class="section-title text-center">My Current Target</h3>
+                <p class="section-description text-center">My Current Target is to learn About HTML,JAVA and Others Programing language</p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="assets/html.png" alt="">
+                    <h4 class="skill-title">HTML</h4>
+                    <p class="skill-description">HTML is a high Programing language</p>
                     <input type="button" value="Learn More">
-                    <li><img src="assets/css.png" alt=""></li>
-                    <h2>CSS</h2>
+                </div> 
+                <div class="skill">
+                    <img src="assets/css.png" alt="">
+                     <h4 class="skill-title">CSS</h4>
+                    <p class="skill-description">CSS is a high Porgraming language</p>
                     <input type="button" value="Learn More">
-                    <li><img src="assets/js.png" alt=""></li>
-                    <h2>JAVAScript</h2>
+                </div>
+                <div class="skill">
+                    <img src="assets/js.png" alt="">
+                     <h4 class="skill-title">JAVAScript</h4>
+                    <p class="skill-description">JAVAScript is a high Programing language</p>
                     <input type="button" value="Learn More">
-                </ul>
+                </div>
             </div>
         </section>
-        <section>
-            <div>
+        <section class="down">
+            <div class="text-center">
                 <h2>I need Support</h2>
                 <h4>Your Support can do My Work Easy</h4>
                 <input type="submit" value="Suggest me any feedback for me">
