add the new code

--- a/index.html
+++ b/index.html
@@ -30,23 +30,25 @@
                <p>To Know About Web Development.To Built A Personality In Web Development</p>
            </div>
            <div>
-               <h3>I will Do Coding and Change The World</h3>
-               <p>I will Be A Programar To teach the illiterate person</p>
-               <img src="assets/Layer_1.png" alt="">
-               <button>Learn More</button>
-           </div>
-           <div>
-            <h3>I will help People by creating Modern Web System</h3>
-            <p>People Will get Modern Web System By Me And They Will bless Me</p>
-            <img src="assets/Group 3.png" alt="">
-            <button>Learn More</button>
-           </div>
-           <div>
-            <h3>I will Do Coding and Change The World</h3>
-            <p>And the World Will be my Under Control</p>
-            <img src="assets/Group 4.png" alt="">
-            <button>Learn More</button>
-           </div>
+               <div class="main-felx">
+                   <h3>I will Do Coding and Change The World</h3>
+                   <p>I will Be A Programar To teach the illiterate person</p>
+                   <button>Learn More</button>
+                   <img src="assets/Layer_1.png" alt="">
+               </div>
+               <div  class="main-felx">
+                   <h3>I will help People by creating Modern Web System</h3>
+                   <p>People Will get Modern Web System By Me And They Will bless Me</p>
+                   <button>Learn More</button>
+                   <img src="assets/Group 3.png" alt="">
+               </div>
+               <div  class="main-felx">
+                   <h3>I will Do Coding and Change The World</h3>
+                   <p>And the World Will be my Under Control</p>
+                   <button>Learn More</button>
+                   <img src="assets/Group 4.png" alt="">
+               </div>
+            </div>
         </section>
         <section>
             <div class="text-content">
