--- a/index.html
+++ b/index.html
@@ -31,23 +31,29 @@
            </div>
            <div>
                <div class="main-felx">
-                   <h3>I will Do Coding and Change The World</h3>
-                   <p>I will Be A Programar To teach the illiterate person</p>
-                   <button>Learn More</button>
+                   <div>
+                       <h3>I will Do Coding and Change The World</h3>
+                       <p>I will Be A Programar To teach the illiterate person</p>
+                       <button>Learn More</button>
+                       </div>
                    <img src="assets/Layer_1.png" alt="">
-               </div>
+                </div>
                <div  class="main-felx">
-                   <h3>I will help People by creating Modern Web System</h3>
-                   <p>People Will get Modern Web System By Me And They Will bless Me</p>
-                   <button>Learn More</button>
-                   <img src="assets/Group 3.png" alt="">
-               </div>
+                <img src="assets/Group 3.png" alt="">
+                   <div>
+                       <h3>I will help People by creating Modern Web System</h3>
+                       <p>People Will get Modern Web System By Me And They Will bless Me</p>
+                       <button>Learn More</button>
+                   </div>
+                </div>
                <div  class="main-felx">
-                   <h3>I will Do Coding and Change The World</h3>
-                   <p>And the World Will be my Under Control</p>
-                   <button>Learn More</button>
+                   <div>
+                       <h3>I will Do Coding and Change The World</h3>
+                       <p>And the World Will be my Under Control</p>
+                       <button>Learn More</button>
+                    </div>
                    <img src="assets/Group 4.png" alt="">
-               </div>
+                </div>
             </div>
         </section>
         <section>
