commit the code

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <li><a href=""><button>Download Resume</button></a></li>
             </ul>
         </nav>
-        <div class="header">
+        <div class="header text-center">
                 <img src="assets/Group.png" alt="" width="240px" height="240px">
             <div class="benner"></div>
-                <h1>"In the near future, I hope to become a Developer."</h1>
+                <h1 class="benner-text">"In the near future, I hope to become a Developer."</h1>
                 <p>I am going to be a developer and I want to be a developer</p>
                 <button class="header-img">Contact with me</button>\
             </div>
@@ -26,10 +26,10 @@
     <main>
         <section>
            <div class="text-center">
-               <h3>To Built Different Personality</h3>
+               <h3 class="text-head">To Built Different Personality</h3>
                <p>To Know About Web Development.To Built A Personality In Web Development</p>
            </div>
-           <div>
+           <div class="section-text">
                <div class="main-felx">
                    <div>
                        <h3>I will Do Coding and Change The World</h3>
@@ -58,13 +58,13 @@
         </section>
         <section>
             <div class="text-content">
-               <h3 class="text-center">My Inspiration</h3>
+               <h3 class="text-center text-head">My Inspiration</h3>
                <p class="text-center">my Inspiration is Bill Gates.He won my respect</p>
                <iframe width="1076" height="550" src="https://www.youtube.com/embed/WWKTfAI1saU?si=-oLwCEA_iQDjCW2S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
         <section class="skills">
-                <h3 class="section-title text-center">My Current Target</h3>
+                <h3 class="section-title text-center text-head">My Current Target</h3>
                 <p class="section-description text-center">My Current Target is to learn About HTML,JAVA and Others Programing language</p>
             <div class="skills-container">
                 <div class="skill">
@@ -89,8 +89,8 @@
         </section>
         <section class="down">
             <div class="text-center">
-                <h2>I need Support</h2>
-                <h4>Your Support can do My Work Easy</h4>
+                <h2 class="text-head" style="color: white;">I need Support</h2>
+                <h4 style="color: white;">Your Support can do My Work Easy</h4>
                 <input type="submit" value="Suggest me any feedback for me">
                 <button aria-placeholder="submit">submit</button>
             </div>
