add the new text

--- a/index.html
+++ b/index.html
@@ -15,71 +15,77 @@
             </ul>
         </nav>
         <div class="header text-center">
-                <img src="assets/Group.png" alt="" width="240px" height="240px">
-            <div class="benner"></div>
-                <h1 class="benner-text">"In the near future, I hope to become a Developer."</h1>
-                <p>I am going to be a developer and I want to be a developer</p>
-                <button class="header-img">Contact with me</button>\
+            <div class="header-text-img">    
+                 <img src="assets/Group.png" alt="" width="240px" height="240px">
+                <div class="benner"></div>
+                    <h1 class="benner-text">"In the near future, I hope to become a Developer."</h1>
+                    <p>I am going to be a developer and I want to be a developer</p>
+                    <button class="header-img">Contact with me</button>\
+                </div>
             </div>
         </div>
     </header>
     <main>
-        <section>
-           <div class="text-center">
-               <h3 class="text-head">To Built Different Personality</h3>
-               <p>To Know About Web Development.To Built A Personality In Web Development</p>
-           </div>
-           <div class="section-text">
-               <div class="main-felx">
-                   <div>
-                       <h3>I will Do Coding and Change The World</h3>
-                       <p>I will Be A Programar To teach the illiterate person</p>
-                       <button>Learn More</button>
-                       </div>
-                   <img src="assets/Layer_1.png" alt="">
+        <section class="text">
+            <div class="text-align">
+                 <div class="text-title text-center">
+                  <h3 class="text-head">To Built Different Personality</h3>
+                  <p>To Know About Web Development.To Built A Personality In Web Development</p>
                 </div>
-               <div  class="main-felx">
-                <img src="assets/Group 3.png" alt="">
-                   <div>
-                       <h3>I will help People by creating Modern Web System</h3>
-                       <p>People Will get Modern Web System By Me And They Will bless Me</p>
-                       <button>Learn More</button>
-                   </div>
-                </div>
-               <div  class="main-felx">
-                   <div>
-                       <h3>I will Do Coding and Change The World</h3>
-                       <p>And the World Will be my Under Control</p>
-                       <button>Learn More</button>
+                 <div class="section-text">
+                     <div class="main-felx" style="background-color: antiquewhite;">
+                         <div>
+                          <h3>I will Do Coding and Change The World</h3>
+                          <p>I will Be A Programar To teach the illiterate person</p>
+                          <button>Learn More</button>
+                        </div>
+                        <img src="assets/Layer_1.png" alt="">
                     </div>
-                   <img src="assets/Group 4.png" alt="">
+                     <div  class="main-felx" style="background-color: thistle;">
+                        <img src="assets/Group 3.png" alt="">
+                        <div>
+                           <h3>I will help People by creating Modern Web System</h3>
+                           <p>People Will get Modern Web System By Me And They Will bless Me</p>
+                           <button>Learn More</button>
+                        </div>
+                    </div>
+                     <div  class="main-felx" style="background-color: rgb(199, 252, 176);">
+                        <div>
+                          <h3>I will Do Coding and Change The World</h3>
+                          <p>And the World Will be my Under Control</p>
+                          <button>Learn More</button>
+                        </div>
+                       <img src="assets/Group 4.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
         <section>
             <div class="text-content">
-               <h3 class="text-center text-head">My Inspiration</h3>
-               <p class="text-center">my Inspiration is Bill Gates.He won my respect</p>
-               <iframe width="1076" height="550" src="https://www.youtube.com/embed/WWKTfAI1saU?si=-oLwCEA_iQDjCW2S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                     <h3 class="text-center text-head">My Inspiration</h3>
+                     <p class="text-center">my Inspiration is Bill Gates.He won my respect</p>
+                <div class="text-content-img">
+                    <iframe width="1140px" height="614px" src="https://www.youtube.com/embed/WWKTfAI1saU?si=-oLwCEA_iQDjCW2S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
             </div>
         </section>
         <section class="skills">
                 <h3 class="section-title text-center text-head">My Current Target</h3>
                 <p class="section-description text-center">My Current Target is to learn About HTML,JAVA and Others Programing language</p>
             <div class="skills-container">
-                <div class="skill">
+                <div class="skill" style="background-color: #f5c5b9;">
                     <img src="assets/html.png" alt="">
                     <h4 class="skill-title">HTML</h4>
                     <p class="skill-description">HTML is a high Programing language</p>
                     <input type="button" value="Learn More">
                 </div> 
-                <div class="skill">
+                <div class="skill" style="background-color: #acc3f0;">
                     <img src="assets/css.png" alt="">
                      <h4 class="skill-title">CSS</h4>
                     <p class="skill-description">CSS is a high Porgraming language</p>
                     <input type="button" value="Learn More">
                 </div>
-                <div class="skill">
+                <div class="skill" style="background-color: #f0e9b7;">
                     <img src="assets/js.png" alt="">
                      <h4 class="skill-title">JAVAScript</h4>
                     <p class="skill-description">JAVAScript is a high Programing language</p>
@@ -88,7 +94,7 @@
             </div>
         </section>
         <section class="down">
-            <div class="text-center">
+            <div class="down-text text-center">
                 <h2 class="text-head" style="color: white;">I need Support</h2>
                 <h4 style="color: white;">Your Support can do My Work Easy</h4>
                 <input type="submit" value="Suggest me any feedback for me">
