--- a/index.html
+++ b/index.html
@@ -102,8 +102,15 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="text-center">
+         <h3>An Open Commitment by Awlad Hossain</h3>
+          <div>
+            <ul>
+                <li><img src="assets/facebook.png" alt=""></li>
+                <li><img src="assets/github.png" alt=""></li>
+                <li><img src="assets/linkedin-icon 1.png" alt=""></li>
+            </ul>
+          </div>
     </footer>
 </body>
 </html>
